# GO-POS-Server

./: .gitignore  .windsurfrules  Cargo.toml  README.md
go-pos/: .gitignore  README.md  cookies.txt  documentation.md  go.mod  go.sum  main.go  start-server.sh  stop-server.sh
go-pos/api/database/: database.go
go-pos/api/discovery/: discovery.go
go-pos/api/handlers/: category.go  discount.go  item.go  modifier.go  option.go  staff.go  transaction.go
go-pos/api/middleware/: auth.go
go-pos/api/models/: category.go  discount.go  item.go  modifier.go  option.go  staff.go  transaction.go
go-pos/api/utils/: id_generator.go
go-pos/config/: config.go
src/: lib.rs  main.rs
src/db/: migrations.rs  mod.rs  seed.rs
src/handlers/: catalog.rs  discounts.rs  health.rs  mod.rs  modifiers.rs  staff.rs
src/middleware/: admin.rs  auth.rs  mod.rs  validation.rs
src/models/: mod.rs
src/utils/: id_generator.rs  mod.rs
src/websocket/: mod.rs
tests/: catalog_tests.rs  common.rs  staff_tests.rs
