[package]
name = "pos-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "pos_backend"
path = "src/lib.rs"

[[bin]]
name = "pos-backend"
path = "src/main.rs"

[dependencies]
# Web framework
actix-cors = "0.6"
actix-web = "4.3"
actix-ws = "0.2"
actix-http = "3.0"

# Logging
env_logger = "0.10"
log = "0.4"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }

# Network
local-ip-address = "0.5"
mdns-sd = "0.10"
hostname = "0.3"

# Utils
uuid = { version = "1.3", features = ["v4", "serde"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Hashing and encoding
ring = "0.17"
data-encoding = "2.4"

# Random number generation
rand = "0.8.5"

# Regex
regex = "1.10.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
actix-rt = "2.0"
regex = "1.10.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
